[package]
name = "blog"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Source code for my personal blog"
repository = "https://github.com/vbe0201/blog"
homepage = "https://obscure.technology"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.12"
lazy_static = "1.4"
regex = "1.5"
rocket = { version = "0.4.10" }
rocket_contrib = { version = "0.4.10", features = ["handlebars_templates", "json"] }
serde = { version = "1.0", features = ["derive"] }
